fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/Visit_Summary__c.object-meta.xml
<CustomObject>
    <description>Visit Summary form for TSE to fill out on each Account after visiting.</description>
    <label>Visit Summary</label>
    <nameField>
        <label>Visit Summary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Visit Summary</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>