fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Visit Summary</relationshipLabel>
    <relationshipName>Visit_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>