fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Additional_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Additional_Contacts__c</fullName>
    <inlineHelpText>Who else was identified that can help drive the Sales Process forward?</inlineHelpText>
    <label>Additional Contacts?</label>
    <type>TextArea</type>
</CustomField>