fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Answer__c.field-meta.xml
<CustomField>
    <fullName>Answer__c</fullName>
    <label>Answer</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agree</fullName>
            </value>
            <value>
                <fullName>Disagree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>