fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Attained_PO__c.field-meta.xml
<CustomField>
    <fullName>Attained_PO__c</fullName>
    <inlineHelpText>Attained Purchase Order</inlineHelpText>
    <label>Attained PO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>