fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/BuildingTrust__c.field-meta.xml
<CustomField>
    <fullName>BuildingTrust__c</fullName>
    <label>Building Trust</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Be sincere &amp; authentic</fullName>
            </value>
            <value>
                <fullName>Inform, Ask &amp; Listen</fullName>
            </value>
            <value>
                <fullName>Be supportive &amp; reliable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>