fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/BuildingTrustDetails__c.field-meta.xml
<CustomField>
    <fullName>BuildingTrustDetails__c</fullName>
    <label>Building Trust Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>BuildingTrust__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Communicate openly, honestly and with an open heart</fullName>
            </value>
            <value>
                <fullName>Say what you mean; listen to others and be open to new ideas</fullName>
            </value>
            <value>
                <fullName>Behave in a consistent and predictable manner</fullName>
            </value>
            <value>
                <fullName>Speak up when something is not right and address the difficult issues</fullName>
            </value>
            <value>
                <fullName>Seek to put forth meaningful discussion and willingly share information to achieve positive outcomes</fullName>
            </value>
            <value>
                <fullName>Share knowledge and information that is accurate and complete</fullName>
            </value>
            <value>
                <fullName>Provide timely, positive and constructive feedback</fullName>
            </value>
            <value>
                <fullName>Listen to understand and seek to be understood</fullName>
            </value>
            <value>
                <fullName>Show genuine interest in other individuals and be accepting of others</fullName>
            </value>
            <value>
                <fullName>Uphold integrity in our actions and conduct in accordance to Teleflex ‘s ethical standards</fullName>
            </value>
            <value>
                <fullName>Follow-up, honor commitment and deliver promises</fullName>
            </value>
            <value>
                <fullName>Believe in the capabilities of others, seek their input, and trust their motives</fullName>
            </value>
            <value>
                <fullName>Strive to create a positive atmosphere by engaging in behaviors that will promote open communication and effective collaboration</fullName>
            </value>
            <value>
                <fullName>Take pride in producing high quality work and deliver / exceed expectations to achieve common good and inspire others to do the same</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>