fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Buyers_Understand_Products__c.field-meta.xml
<CustomField>
    <fullName>Buyers_Understand_Products__c</fullName>
    <inlineHelpText>Buyers understand link between proposed solutions &amp; their needs</inlineHelpText>
    <label>Buyers Understand Products</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>