fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/CFY_Percent_Avg__c.field-meta.xml
<CustomField>
    <fullName>CFY_Percent_Avg__c</fullName>
    <formula>YTD_Sales_Totals__c /  YTD_Objective_Totals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Y.T.D % Plan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>