fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/CFY_Totals__c.field-meta.xml
<CustomField>
    <fullName>CFY_Totals__c</fullName>
    <formula>EZIO_CFY_Objective__c  +   CVC_ART_CFY_Objective__c  +  PICC_VPS_CFY_Objective__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CFY Totals</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>