fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Clinical_Proficency__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Proficency__c</fullName>
    <description>Clinical Proficiency (asks appropriate questions to determine clinical needs, demonstrates listening skills, proficient at overcoming objections, provides accurate clinical instruction based on IFUs, demonstrates effective presentation skills, controls the room during bedside precepting, differentiates hospital bedside nursing from medical device clinical support)</description>
    <inlineHelpText>Clinical Proficiency (asks appropriate questions to determine clinical needs, demonstrates listening skills, proficient at overcoming objections, provides accurate clinical instruction based on IFUs, demonstrates effective presentation skills..)</inlineHelpText>
    <label>Clinical Proficiency</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Exceeds</fullName>
            </value>
            <value>
                <fullName>Fully Meets</fullName>
            </value>
            <value>
                <fullName>Partially Meets</fullName>
            </value>
            <value>
                <fullName>Does Not Meet</fullName>
            </value>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Achieving</fullName>
            </value>
            <value>
                <fullName>Exceeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>