fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Collaboration__c.field-meta.xml
<CustomField>
    <fullName>Collaboration__c</fullName>
    <description>Recognizes the importance of communicating and collaborating with teammates on clinical training/projects. Clearly communicates roles and responsibilities and manages resources to deliver training with a defined follow up/pull-through plan</description>
    <inlineHelpText>Recognizes the importance of communicating and collaborating with teammates on clinical training/projects. Clearly communicates roles and responsibilities and manages resources to deliver training with a defined follow up/pull-through plan</inlineHelpText>
    <label>Collaboration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Needs Improvement</fullName>
            </value>
            <value>
                <fullName>Achieving</fullName>
            </value>
            <value>
                <fullName>Exceeding</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>