fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Conducted_Product_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Conducted_Product_Evaluation__c</fullName>
    <description>Conducted Product Evaluation</description>
    <inlineHelpText>Conducted Product Evaluation</inlineHelpText>
    <label>Conducted Product Evaluation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>