fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Conducted_QBR__c.field-meta.xml
<CustomField>
    <fullName>Conducted_QBR__c</fullName>
    <inlineHelpText>Quarterly Business Review has been conducted.</inlineHelpText>
    <label>Conducted QBR</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>