fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Confirm_budget_avail__c.field-meta.xml
<CustomField>
    <fullName>Confirm_budget_avail__c</fullName>
    <inlineHelpText>Confirm budget availability &amp; customer’s decision making process</inlineHelpText>
    <label>Confirm Budget Avail &amp; Process</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>