fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Core_Product_1_YTD_Growth__c.field-meta.xml
<CustomField>
    <fullName>Core_Product_1_YTD_Growth__c</fullName>
    <label>Core Product YTD Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>