fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Core_Product_2__c.field-meta.xml
<CustomField>
    <fullName>Core_Product_2__c</fullName>
    <label>Core Product #2</label>
    <length>15</length>
    <type>Text</type>
</CustomField>