fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Core_Quota__c.field-meta.xml
<CustomField>
    <fullName>Core_Quota__c</fullName>
    <label>Core YTD Quota</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>