fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Core_Upside_Opportunity_3__c.field-meta.xml
<CustomField>
    <fullName>Core_Upside_Opportunity_3__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core Upside Opportunity 3</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Visit Summary (Core Upside Opportunity 3)</relationshipLabel>
    <relationshipName>Visit_Summary3</relationshipName>
    <type>Lookup</type>
</CustomField>