fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Core_Upside_Opportunity_Acct_2__c.field-meta.xml
<CustomField>
    <fullName>Core_Upside_Opportunity_Acct_2__c</fullName>
    <formula>Core_Upside_Opportunity_2__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Upside Opportunity Acct 2</label>
    <type>Text</type>
</CustomField>