fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Core_Upside_Opportunity_Amt_3__c.field-meta.xml
<CustomField>
    <fullName>Core_Upside_Opportunity_Amt_3__c</fullName>
    <formula>Core_Upside_Opportunity_3__r.Curr_Year_Impact__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Upside Opportunity Amt 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>