fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Core_Upside_Opportunity_Close_Date_1__c.field-meta.xml
<CustomField>
    <fullName>Core_Upside_Opportunity_Close_Date_1__c</fullName>
    <formula>Core_Upside_Opportunity_1__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Core Upside Opportunity Close Date 1</label>
    <type>Date</type>
</CustomField>