fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/CoreValuesComments__c.field-meta.xml
<CustomField>
    <fullName>CoreValuesComments__c</fullName>
    <label>Core Values: Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>