fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Created_solutions_based_defined_needs__c.field-meta.xml
<CustomField>
    <fullName>Created_solutions_based_defined_needs__c</fullName>
    <label>Created solutions based defined needs</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>