fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/CSSReviewComments__c.field-meta.xml
<CustomField>
    <fullName>CSSReviewComments__c</fullName>
    <label>CSS Review Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>