fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Current_Pipeline__c.field-meta.xml
<CustomField>
    <fullName>Current_Pipeline__c</fullName>
    <label>Current Pipeline</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>