fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/CVC_ART_YTD_Percent_Objective__c.field-meta.xml
<CustomField>
    <fullName>CVC_ART_YTD_Percent_Objective__c</fullName>
    <formula>IF(CVC_ART_YTD_Objective__c &lt;&gt; 0,CVC_ART_YTD_Sales__c  /  CVC_ART_YTD_Objective__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CVC/ART YTD % Objective</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>