fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/CVC_ART_YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>CVC_ART_YTD_Sales__c</fullName>
    <label>CVC/ART YTD Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>