fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Date_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Meeting__c</fullName>
    <label>Date of Meeting</label>
    <required>true</required>
    <type>Date</type>
</CustomField>