fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Decision_criteria_developed_a_strategy__c.field-meta.xml
<CustomField>
    <fullName>Decision_criteria_developed_a_strategy__c</fullName>
    <inlineHelpText>Validated decision criteria &amp; developed a strategy to neutralize adversaries .</inlineHelpText>
    <label>Decision criteria &amp; developed a strategy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>