fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Development_Needs5__c.field-meta.xml
<CustomField>
    <fullName>Development_Needs5__c</fullName>
    <label>Development Needs</label>
    <type>TextArea</type>
</CustomField>