fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Discovery_s__c.field-meta.xml
<CustomField>
    <fullName>Discovery_s__c</fullName>
    <inlineHelpText>Asked discovery questions to identify needs</inlineHelpText>
    <label>Discovery ?&apos;s / Needs Identified</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>