fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Discussed_Expansion_Opps__c.field-meta.xml
<CustomField>
    <fullName>Discussed_Expansion_Opps__c</fullName>
    <inlineHelpText>Discussed expansion opportunities within trial.</inlineHelpText>
    <label>Discussed Expansion Opps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>