fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Discussion_Points__c.field-meta.xml
<CustomField>
    <fullName>Discussion_Points__c</fullName>
    <inlineHelpText>Discussion points, next steps, and ride goals that were met</inlineHelpText>
    <label>Discussion Points</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>