fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/dollars_to_Core_YTD_Quota__c.field-meta.xml
<CustomField>
    <fullName>dollars_to_Core_YTD_Quota__c</fullName>
    <label>$ to Core YTD Quota</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>