fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/EFx_Portfolio_Pull_Through2__c.field-meta.xml
<CustomField>
    <fullName>EFx_Portfolio_Pull_Through2__c</fullName>
    <defaultValue>&quot;Full account conversion target = 1 / half&quot;&amp;BR()&amp;&quot;Accounts / Surgeon(s) / Status:&quot;&amp;BR()&amp;&quot;1.&quot;&amp;BR()&amp;&quot;2.&quot;&amp;BR()&amp;&quot;3.&quot;</defaultValue>
    <label>EFx Portfolio Pull Through</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>