fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/EntrepreneurialSpiritDetails__c.field-meta.xml
<CustomField>
    <fullName>EntrepreneurialSpiritDetails__c</fullName>
    <label>Entrepreneurial Spirit Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EntrepreneurialSpirit__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approaches work and solves problems by continually looking for new or better ways to accomplish tasks, effectively balancing risks and rewards and constantly striving for operational excellence.</fullName>
            </value>
            <value>
                <fullName>Embrace prudent risk taking</fullName>
            </value>
            <value>
                <fullName>Anticipate recognize and act on opportunities for positive results or changes</fullName>
            </value>
            <value>
                <fullName>Initiate change &amp; innovation • Continually question and challenge to improve our products, services and ways of working</fullName>
            </value>
            <value>
                <fullName>Seek to push standards and raise the bars for better performance every time</fullName>
            </value>
            <value>
                <fullName>Embrace change and take reasonable risks; learn from both successes and failures.</fullName>
            </value>
            <value>
                <fullName>Discover new possibilities and challenge the status quo</fullName>
            </value>
            <value>
                <fullName>Take ownership &amp; be accountable • Aim to do the right things and make informed decisions to benefit short-term and long-term goals</fullName>
            </value>
            <value>
                <fullName>Hold self and team accountable to meet customer and business goals and be committed to stay the course from start to finish to deliver desired outcomes</fullName>
            </value>
            <value>
                <fullName>Be proactive and leverage on opportunities to grow and learn</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>