fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Events_Planned_This_Year__c.field-meta.xml
<CustomField>
    <fullName>Events_Planned_This_Year__c</fullName>
    <defaultValue>&quot;Event 1:&quot;&amp;BR()&amp;&quot;Event 2:&quot;&amp;BR()&amp;&quot;Event 3:&quot;&amp;BR()</defaultValue>
    <label>Events Planned This Year</label>
    <type>TextArea</type>
</CustomField>