fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/EZIO_YTD_Percent_Objective__c.field-meta.xml
<CustomField>
    <fullName>EZIO_YTD_Percent_Objective__c</fullName>
    <formula>IF(EZIO_YTD_Objective__c &lt;&gt; 0,EZIO_YTD_Sales__c / EZIO_YTD_Objective__c,null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>EZIO YTD % Objective</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>