fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Field_Ride_Recap__c.field-meta.xml
<CustomField>
    <fullName>Field_Ride_Recap__c</fullName>
    <label>Field Ride Recap</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>