fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Field_Visit_Objective_1__c.field-meta.xml
<CustomField>
    <fullName>Field_Visit_Objective_1__c</fullName>
    <label>Objective #1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>