fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Financial_Solution_Support__c.field-meta.xml
<CustomField>
    <fullName>Financial_Solution_Support__c</fullName>
    <description>Presented &amp; gained support of financial solution</description>
    <inlineHelpText>Presented &amp; gained support of financial solution</inlineHelpText>
    <label>Financial Solution Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>