fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Focus_Product_1__c.field-meta.xml
<CustomField>
    <fullName>Focus_Product_1__c</fullName>
    <label>Focus Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>