fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Focus_Product_3__c.field-meta.xml
<CustomField>
    <fullName>Focus_Product_3__c</fullName>
    <label>Focus Product #3</label>
    <length>15</length>
    <type>Text</type>
</CustomField>