fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Focus_Product_3_YTD_Growth__c.field-meta.xml
<CustomField>
    <fullName>Focus_Product_3_YTD_Growth__c</fullName>
    <label>Focus Product #3 YTD Growth</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>