fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Focus_Quota__c.field-meta.xml
<CustomField>
    <fullName>Focus_Quota__c</fullName>
    <inlineHelpText>Please enter your Quota number for your Focus product line.</inlineHelpText>
    <label>Focus YTD Quota</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>