fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Focus_to_Quota__c.field-meta.xml
<CustomField>
    <fullName>Focus_to_Quota__c</fullName>
    <formula>Focus_YTD_Sales__c/Focus_Quota__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Focus % to Quota</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>