fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/Focus_YTD_Sales__c.field-meta.xml
<CustomField>
    <fullName>Focus_YTD_Sales__c</fullName>
    <inlineHelpText>Please enter your Focus YTD Sales</inlineHelpText>
    <label>Focus YTD Sales</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>