fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/H1_2_Imperatives_RSM_Comments_post_visit__c.field-meta.xml
<CustomField>
    <fullName>H1_2_Imperatives_RSM_Comments_post_visit__c</fullName>
    <label>H1/2 Imperatives RSM Comments post-visit</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>