fullSandbox11072023/force-app/main/default/objects/Visit_Summary__c/fields/HOL_Annual_Trend_to_Maintain_Grow__c.field-meta.xml
<CustomField>
    <fullName>HOL_Annual_Trend_to_Maintain_Grow__c</fullName>
    <inlineHelpText>This amount should be your total sales divided by 12 multiplied by the number of months you are in.</inlineHelpText>
    <label>HOL Annual Trend to Maintain or Grow</label>
    <precision>9</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>